# col-doc

./: IDEAS.md  README.md  TODO.md
backend/: .env  Cargo.toml  readme.md
backend/src/: main.rs  state.rs
backend/src/api/: auth.rs  docs.rs  mod.rs  users.rs
backend/src/ws/: handler.rs  mod.rs  protocol.rs
docs/: api.md  architecture.md  authentication.md  authorisation.md  preferences.md  websocket-protocol.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: axios.ts  client.ts  docs.ts  http-client.ts
frontend/src/api/field-sessions/: index.ts
frontend/src/components/: AppContextProvider.tsx  CollabCursors.tsx  ConnectionBadge.tsx  Toolbar.tsx
frontend/src/hooks/: useCollabCursors.ts  useDocTitle.ts  useYjsDoc.ts
frontend/src/module/logger/: error.ts  index.ts
frontend/src/pages/: EditorPage.tsx  HomePage.tsx  NotFoundPage.tsx
frontend/src/routes/: app-routes.tsx  route-navigators.tsx
frontend/src/store/: useAppStore.ts
frontend/src/translations/: en.json
