[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core web framework
axum       = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio      = { version = "1",   features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
chrono     = { version = "0.4", features = ["serde"] }

# Async utils
futures      = "0.3"
tokio-stream = "0.1"

# Logging / error handling
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow    = "1"
thiserror = "1"

# IDs
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# Misc
once_cell  = "1"
dotenv     = "0.15"
regex      = "1"

# Auth (TODO: wire up JWT login flow)
jsonwebtoken = "8"
sha2         = "0.10"

# Database (TODO: replace in-memory store with Postgres snapshots)
# sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "chrono", "uuid"] }

# Email (TODO: doc-share invitations)
# lettre = { version = "0.11", features = ["tokio1", "pool", "tokio1-native-tls"] }
